# loma

./: .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
src/: api.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: backup.rs  doctor.rs  gen.rs  gen_interactive.rs  health.rs  init.rs  install.rs  mod.rs  optimize.rs  reinstall.rs  remove.rs  restore.rs  session.rs  skills.rs  status.rs  sync.rs  tips.rs  tutorial.rs  update.rs  usage.rs
src/json/: claudeignore_defaults.json  inject.json  loma_env_defaults.json  loma_opencode_defaults.json  skills.json  tutorials.json
src/providers/: claude.rs  mod.rs  opencode.rs
src/utils/: banner.rs  const.rs  display.rs  env.rs  fs.rs  mod.rs
