[package]
name = "loma"
version = "0.1.0"
edition = "2021"
authors = ["Raja Rakotonirina <raja.rakoto7@gmail.com>"]
license = "MIT"
description = "Local LLM Optimizer & Manager Assistant"
repository = "https://github.com/RajaRakoto/loma"
readme = "README.md"
keywords = ["rust", "llm", "vibe-coding", "ai", "manager", "optimization"]
categories = ["command-line-utilities", "ai"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP server framework
axum = { version = "0.7", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "loma"
path = "src/main.rs"

[lib]
name = "loma"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
